--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dopefolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <meta name="description" content="explosivemine's portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -27,7 +27,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Explosivemines</span>
+          <span class="header__logo-sub">explosivemines</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -117,6 +117,13 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
+                Hey It's
+                <strong>explosivemines</strong>
+                and I'm a <strong> Backend Java Developer </strong>. I've
+                been doing programming as a hobby as well as making bukkit
+                plugins for many different servers for the past 2 years while
+                in high school.
+                
                 Hey! It's
                 <strong>John Doe</strong>
                 and I'm a <strong> Frontend Web Developer </strong> located in
