--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/explosive.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">explosivemines</span>
+          <span class="header__logo-sub">explosivemines's portfolio</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -288,7 +281,7 @@
         <div class="main-footer__upper">
           <div class="main-footer__row main-footer__row-1">
             <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
+              <span>github</span>
             </h2>
             <div class="main-footer__social-cont">
               <a target="_blank" rel="noreferrer" href="https://github.com/explosiveMine">
