--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            These are some of my most recent projects
+            Some of my most recent minecraft plugins
           </span>
         </h2>
 
@@ -159,11 +159,10 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Hot Air Balloons</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Travel through your world using the hot air balloon
+                of your choice!
               </p>
               <a
                 href="./project-1.html"
@@ -183,11 +182,10 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Bedrock Miner</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Modify the breaking speed of any minecraft block
+                and even mine previously unbreakable blocks!
               </p>
               <a
                 href="./project-2.html"
@@ -207,11 +205,10 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">Torus</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Create various shapes, animations and effects using
+                particles!
               </p>
               <a
                 href="./project-3.html"
