--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Some of my most recent minecraft plugins
+            This is some of my best work
           </span>
         </h2>
 
