added project preview

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/balloon-removebg-preview.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -175,7 +175,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/bedrock_miner.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -198,7 +198,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/torus-removebg-preview.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
