--- a/project-1.html
+++ b/project-1.html
@@ -112,8 +112,8 @@
               <h3 class="project-details__content-title">Problems Encountered</h3>
               <p class="project-details__desc-para">
                 Minecraft itself has a bug where falling blocks cannot be teleported
-                smoothly and predictably. In order to bypass this, I created the falling
-                blocks as passengers to another invisible entity. This conveniently
+                smoothly and predictably. In order to bypass this, I made the falling
+                blocks passengers to another invisible entity and this conveniently
                 solves the problem.
               </p>
             </div>
