--- a/project-1.html
+++ b/project-1.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <span class="header__logo-sub">explosivemines</span>
+          <span class="header__logo-sub">explosivemines's projects</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -136,7 +136,7 @@
                 href="#"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Code Link</a
+                >Code Link (Unavailable)</a
               >
             </div>
           </div>
