--- a/project-1.html
+++ b/project-1.html
@@ -136,7 +136,7 @@
                 href="#"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Code Link (Unavailable)</a
+                >Code Link (unavailable)</a
               >
             </div>
           </div>
