--- a/project-1.html
+++ b/project-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Hot Air Balloons plugin</title>
+    <title>Hot Air Balloons</title>
     <meta name="description" content="Case study page of project 1" />
 
     <link rel="stylesheet" href="css/style.css" />
