--- a/project-1.html
+++ b/project-1.html
@@ -81,7 +81,7 @@
         <div class="project-cs-hero__info">
           <p class="text-primary">
             Smoothly travel in a hot air balloon in a
-            beautiful trajectory using sine curves
+            beautiful trajectory using sine waves
           </p>
         </div>
         <div class="project-cs-hero__cta">
