--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, I'm explosivemines</h1>
+        <h1 class="heading-primary">Hey, I'm explosivemine</h1>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
         </div>
@@ -111,7 +111,7 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>explosivemines</strong>
+                <strong>explosivemine</strong>
                 and I'm a <strong> Backend Java Developer </strong>. I've
                 been doing programming as a hobby as well as making bukkit
                 plugins for many servers for 4 years.
@@ -291,7 +291,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">explosivemines</h4>
+            <h4 class="heading heading-sm text-lt">explosivemine</h4>
           </div>
         </div>
 
