--- a/project-1.html
+++ b/project-1.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <span class="header__logo-sub">explosivemines's projects</span>
+          <span class="header__logo-sub">explosivemine's projects</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">explosivemines</h4>
+            <h4 class="heading heading-sm text-lt">explosivemine</h4>
           </div>
         </div>
 
