--- a/project-3.html
+++ b/project-3.html
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">explosivemines</h4>
+            <h4 class="heading heading-sm text-lt">explosivemine</h4>
           </div>
         </div>
 
