--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <span class="header__logo-sub">explosivemines's portfolio</span>
+          <span class="header__logo-sub">explosivemine's portfolio</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
