--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </p>
               <p class="about__content-details-para">
                 I love using math to make interesting animations and plugins
-                and push minecraft to its very limits! I've collaborated with
+                and push minecraft to its limits! I've collaborated with
                 some talented people to make innovative plugins and I'm looking
                 to work in a team to enhance my knowledge. Feel free to
                 contact me here.
