--- a/project-2.html
+++ b/project-2.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
-          <span class="header__logo-sub">explosivemine's projects</span>
+          <a href="./index.html#projects" class="header__logo-sub">explosivemine's projects</a>
         </div>
         <div class="header__main">
           <ul class="header__links">
