--- a/project-1.html
+++ b/project-1.html
@@ -132,12 +132,7 @@
                 target="_blank"
                 >Live Link</a
               >
-              <a
-                href="#"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link (unavailable)</a
-              >
+              <span class="btn btn--med btn--theme-inv project-details__links-btn">Code Link (unavailable)</span>
             </div>
           </div>
         </div>
