--- a/project-2.html
+++ b/project-2.html
@@ -125,7 +125,7 @@
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/ExplosiveMine/BedrockMiner"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
