--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
             />
           </a>
         </div>
+        <div class="home-hero__social">
+          <a href="https://www.spigotmc.org/resources/authors/_explosive_mine_.586935/" class="home-hero__social-icon-link">
+            <img
+              src="./assets/png/spigot-logo.png"
+              alt="icon"
+              class="home-hero__social-icon"
+            />
+          </a>
+        </div>
       </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
@@ -159,7 +168,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Hot Air Balloons</h3>
+              <h3 class="projects__row-content-title">HOT AIR BALLOONS</h3>
               <p class="projects__row-content-desc">
                 Travel through your world using the hot air balloon
                 of your choice!
@@ -182,7 +191,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Bedrock Miner</h3>
+              <h3 class="projects__row-content-title">BEDROCK MINER</h3>
               <p class="projects__row-content-desc">
                 Modify the breaking speed of any minecraft block
                 and even mine previously unbreakable blocks!
@@ -205,7 +214,7 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Torus</h3>
+              <h3 class="projects__row-content-title">TORUS</h3>
               <p class="projects__row-content-desc">
                 Create various shapes, animations and effects using
                 particles!
@@ -285,6 +294,15 @@
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
+                  alt="icon"
+                />
+              </a>
+            </div>
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="https://www.spigotmc.org/resources/authors/_explosive_mine_.586935/">
+                <img
+                  class="main-footer__icon"
+                  src="./assets/png/spigot-logo.png"
                   alt="icon"
                 />
               </a>
