--- a/project-3.html
+++ b/project-3.html
@@ -139,13 +139,22 @@
         <div class="main-footer__upper">
           <div class="main-footer__row main-footer__row-1">
             <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>github</span>
+              <span>links</span>
             </h2>
             <div class="main-footer__social-cont">
               <a target="_blank" rel="noreferrer" href="https://github.com/explosiveMine">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
+                  alt="icon"
+                />
+              </a>
+            </div>
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="https://www.spigotmc.org/resources/authors/_explosive_mine_.586935/">
+                <img
+                  class="main-footer__icon"
+                  src="./assets/png/spigot-logo.png"
                   alt="icon"
                 />
               </a>
