--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 Hey! It's
                 <strong>explosivemine</strong>
                 and I'm a <strong> Backend Java Developer </strong>. I've
-                been doing programming as a hobby as well as making bukkit
-                plugins for many servers for 4 years.
+                been doing programming as a hobby for 4 years and I've been
+                making bukkit plugins for various servers since 2 years.
               </p>
               <p class="about__content-details-para">
                 I love using math to make interesting animations and plugins
