--- a/project-2.html
+++ b/project-2.html
@@ -116,21 +116,28 @@
                 <div class="skills__skill">GIT</div>
               </div>
             </div>
-            <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
-              <a
-                href="#"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="https://github.com/ExplosiveMine/BedrockMiner"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="project-links">
+      <div class="main-container">
+        <div class="project-links__content">
+          <div class="project-links__content-main">
+            <h3 class="project-details__content-title">See Live</h3>
+            <a
+              href="#"
+              class="btn btn--med btn--theme project-details__links-btn"
+              target="_blank"
+              >Live Link</a
+            >
+            <a
+              href="https://github.com/ExplosiveMine/BedrockMiner"
+              class="btn btn--med btn--theme-inv project-details__links-btn"
+              target="_blank"
+              >Code Link</a
+            >
           </div>
         </div>
       </div>
