--- a/project-2.html
+++ b/project-2.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-2#links.html" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -121,7 +121,7 @@
         </div>
       </div>
     </section>
-    <section class="project-links">
+    <section id="links" class="project-links">
       <div class="main-container">
         <div class="project-links__content">
           <div class="project-links__content-main">
