--- a/project-2.html
+++ b/project-2.html
@@ -121,9 +121,9 @@
         </div>
       </div>
     </section>
-    <section id="links" class="project-links">
+    <section id="links" class="project-details">
       <div class="main-container">
-        <div class="project-links__content">
+        <div class="project-details__links">
           <div class="project-links__content-main">
             <h3 class="project-details__content-title">See Live</h3>
             <a
