--- a/project-2.html
+++ b/project-2.html
@@ -122,7 +122,7 @@
     </section>
     <section id="links" class="project-details">
       <div class="main-container">
-        <div class="project-details__links">
+        <div class="project-links__content">
           <div class="project-links__content-main">
             <h3 class="project-details__content-title">See Live</h3>
             <a
