--- a/project-2.html
+++ b/project-2.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="./project-2#links.html" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-2.html#links" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
