--- a/project-1.html
+++ b/project-1.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="./project-1.html#links" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-1.html#links" class="btn btn--bg">Live</a>
         </div>
       </div>
     </section>
@@ -136,11 +136,10 @@
             <a
               href="#"
               class="btn btn--med btn--theme project-details__links-btn"
-              target="_blank"
               >Live Link</a
             >
             <a
-              href="https://github.com/ExplosiveMine/BedrockMiner"
+              href="#"
               class="btn btn--med btn--theme-inv project-details__links-btn"
               target="_blank"
               >Code Link (unavailable)</a
