--- a/project-2.html
+++ b/project-2.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="./project-2.html#links" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-2.html#links" class="btn btn--bg">Live</a>
         </div>
       </div>
     </section>
@@ -128,7 +128,6 @@
             <a
               href="#"
               class="btn btn--med btn--theme project-details__links-btn"
-              target="_blank"
               >Live Link</a
             >
             <a
